--- a/index.html
+++ b/index.html
@@ -44,7 +44,18 @@
   <!-- iOS Host Copy -->
   <div class="bg-gray-800 p-6 rounded-lg shadow-lg mb-6 w-full max-w-xl text-left">
     <h2 class="text-lg font-semibold mb-2">iOS Host Link</h2>
-    <textarea id="iosText" class="w-full bg-gray-700 p-3 rounded text-sm mb-3" rows="1" readonly>https://growsoft.cc/ios.txt</textarea>
+    <textarea id="iosText" class="w-full bg-gray-700 p-3 rounded text-sm mb-3" rows="1" readonly> [General]
+bypass-system = true
+
+[Rule]
+FINAL,DIRECT
+
+[Host]
+growtopia1.com = 91.134.85.13
+growtopia2.com = 91.134.85.13
+www.growtopia1.com = 91.134.85.13
+www.growtopia2.com = 91.134.85.13
+RvLnd.here = 91.134.85.13</textarea>
     <button onclick="copyText('iosText')" class="bg-purple-600 hover:bg-purple-700 px-4 py-2 rounded">📋 Copy</button>
   </div>
 
