--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>GTPS25 Host Tools</title>
+  <title>GTPS25 Host</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-900 text-white min-h-screen flex flex-col items-center p-6">
@@ -44,7 +44,8 @@
   <!-- iOS Host Copy -->
   <div class="bg-gray-800 p-6 rounded-lg shadow-lg mb-6 w-full max-w-xl text-left">
     <h2 class="text-lg font-semibold mb-2">iOS Host Link</h2>
-    <textarea id="iosText" class="w-full bg-gray-700 p-3 rounded text-sm mb-3" rows="10" readonly> [General]
+    <textarea id="iosText" class="w-full bg-gray-700 p-3 rounded text-sm mb-3" rows="12" readonly>
+[General]
 bypass-system = true
 
 [Rule]
