--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
       ⬇️ Click to Download
     </a>
   </div>
-
+  <!-- Ptunnel Host Copy -->
+    <div class="bg-gray-800 p-6 rounded-lg shadow-lg mb-4 w-full max-w-xl text-left">
+    <h2 class="text-lg font-semibold mb-2">Power Tunnel Host</h2>
+    <textarea id="PtunnelText" class="w-full bg-gray-700 p-3 rounded text-sm mb-3" rows="4" readonly>https://growsoft.cc/android.txt
+    </textarea>
+    <button onclick="copyText('ptunnelText')" class="bg-green-600 hover:bg-green-700 px-4 py-2 rounded">📋 Copy</button>
+  </div>
   <!-- macOS Host Copy -->
   <div class="bg-gray-800 p-6 rounded-lg shadow-lg mb-4 w-full max-w-xl text-left">
     <h2 class="text-lg font-semibold mb-2">macOS Host</h2>
