--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GTPS25 Host</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GTPS25 Host Setup</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    .fade-in {
+      animation: fadeIn 0.8s ease-in-out;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
-<body class="bg-gray-950 text-white min-h-screen font-sans">
+<body class="bg-gray-950 text-white min-h-screen font-sans transition-all">
+
+  <!-- Toast -->
+  <div id="toast" class="fixed bottom-5 right-5 bg-green-600 text-white px-4 py-2 rounded shadow-lg hidden z-50">
+    ✅ Copied!
+  </div>
 
   <!-- Header -->
-  <header class="bg-gray-900 w-full py-6 shadow-md mb-8">
+  <header class="bg-gray-900 w-full py-6 shadow-md mb-10">
     <div class="max-w-4xl mx-auto px-6 text-center">
       <h1 class="text-4xl font-extrabold tracking-wide flex justify-center items-center gap-3">
         🌐 GTPS25 Host Setup
@@ -19,60 +33,73 @@
   </header>
 
   <!-- Main Content -->
-  <main class="max-w-4xl mx-auto px-4 grid gap-6">
-    
-    <!-- Download Button -->
+  <main class="max-w-4xl mx-auto px-4 grid gap-6 fade-in">
+
+    <!-- Download Section -->
     <section class="bg-gray-800 p-6 rounded-lg shadow-md text-center">
-      <h2 class="text-2xl font-semibold mb-4">Download Windows Host File</h2>
+      <h2 class="text-2xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-blue-500 mb-4">
+        ⬇️ Download Windows Host File
+      </h2>
       <a id="downloadBtn" href="#" download="gtps25_hosts.txt"
          class="bg-blue-600 hover:bg-blue-700 transition-all px-6 py-3 rounded-full inline-block font-medium">
-        ⬇️ Download Host File
+        📄 Download Host File
       </a>
     </section>
 
     <!-- Platform Blocks -->
     <section class="grid md:grid-cols-2 gap-6">
-      
+
       <!-- Power Tunnel -->
       <div class="bg-gray-800 p-6 rounded-lg shadow-md">
-        <h2 class="text-xl font-semibold mb-3">Power Tunnel Host</h2>
-        <textarea id="PtunnelText" class="w-full bg-gray-700 p-3 rounded text-sm" rows="3" readonly>
-https://growsoft.cc/android.txt</textarea>
-        <button onclick="copyText('PtunnelText')" class="mt-3 bg-green-600 hover:bg-green-700 px-4 py-2 rounded transition-all">
+        <h2 class="text-xl font-semibold mb-3">⚙️ Power Tunnel Host</h2>
+        <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">
+          Click to copy Power Tunnel URL
+        </div>
+        <textarea id="PtunnelText" class="hidden" readonly>https://growsoft.cc/android.txt</textarea>
+        <button onclick="copyText('PtunnelText')" class="mt-2 bg-green-600 hover:bg-green-700 px-4 py-2 rounded transition-all">
           📋 Copy
         </button>
       </div>
 
       <!-- macOS Host -->
       <div class="bg-gray-800 p-6 rounded-lg shadow-md">
-        <h2 class="text-xl font-semibold mb-3">macOS Host</h2>
-        <textarea id="macText" class="w-full bg-gray-700 p-3 rounded text-sm" rows="4" readonly>
+        <h2 class="text-xl font-semibold mb-3">🍏 macOS Host</h2>
+        <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">
+          Copy macOS host entries for your system
+        </div>
+        <textarea id="macText" class="hidden" readonly>
 91.134.85.13 growtopia1.com
 91.134.85.13 growtopia2.com
 91.134.85.13 www.growtopia1.com
 91.134.85.13 www.growtopia2.com</textarea>
-        <button onclick="copyText('macText')" class="mt-3 bg-green-600 hover:bg-green-700 px-4 py-2 rounded transition-all">
+        <button onclick="copyText('macText')" class="mt-2 bg-green-600 hover:bg-green-700 px-4 py-2 rounded transition-all">
           📋 Copy
         </button>
       </div>
 
       <!-- Windows Host -->
       <div class="bg-gray-800 p-6 rounded-lg shadow-md">
-        <h2 class="text-xl font-semibold mb-3">Windows Host</h2>
-        <textarea id="windowsText" class="w-full bg-gray-700 p-3 rounded text-sm" rows="4" readonly>
+        <h2 class="text-xl font-semibold mb-3">🪟 Windows Host</h2>
+        <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">
+          Copy Windows host entries to clipboard
+        </div>
+        <textarea id="windowsText" class="hidden" readonly>
 91.134.85.13 growtopia1.com
 91.134.85.13 growtopia2.com
 91.134.85.13 www.growtopia1.com
 91.134.85.13 www.growtopia2.com</textarea>
-        <button onclick="copyText('windowsText')" class="mt-3 bg-blue-600 hover:bg-blue-700 px-4 py-2 rounded transition-all">
+        <button onclick="copyText('windowsText')" class="mt-2 bg-blue-600 hover:bg-blue-700 px-4 py-2 rounded transition-all">
           📋 Copy
         </button>
       </div>
 
       <!-- iOS Host -->
       <div class="bg-gray-800 p-6 rounded-lg shadow-md">
-        <h2 class="text-xl font-semibold mb-3">iOS Host Link</h2>
-        <textarea id="iosText" class="w-full bg-gray-700 p-3 rounded text-sm" rows="10" readonly>
+        <h2 class="text-xl font-semibold mb-3">📱 iOS Host Link</h2>
+        <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">
+          Tap to copy iOS config for Shadowrocket or Surge
+        </div>
+        <textarea id="iosText" class="hidden" readonly>
 [General]
 bypass-system = true
 
@@ -85,7 +112,7 @@ growtopia2.com = 91.134.85.13
 www.growtopia1.com = 91.134.85.13
 www.growtopia2.com = 91.134.85.13
 RvLnd.here = 91.134.85.13</textarea>
-        <button onclick="copyText('iosText')" class="mt-3 bg-purple-600 hover:bg-purple-700 px-4 py-2 rounded transition-all">
+        <button onclick="copyText('iosText')" class="mt-2 bg-purple-600 hover:bg-purple-700 px-4 py-2 rounded transition-all">
           📋 Copy
         </button>
       </div>
@@ -99,24 +126,30 @@ RvLnd.here = 91.134.85.13</textarea>
   </footer>
 
   <script>
-    // Downloadable content
+    // Downloadable host file content
     const downloadContent = `91.134.85.13 growtopia1.com
 91.134.85.13 growtopia2.com
 91.134.85.13 www.growtopia1.com
 91.134.85.13 www.growtopia2.com`;
 
-    // Create and attach download link
     const blob = new Blob([downloadContent], { type: "text/plain" });
     document.getElementById("downloadBtn").href = URL.createObjectURL(blob);
 
-    // Modern clipboard API
+    // Copy from hidden textarea
     function copyText(id) {
       const textArea = document.getElementById(id);
-      navigator.clipboard.writeText(textArea.value).then(() => {
-        alert("Copied to clipboard!");
-      }).catch(err => {
-        console.error('Clipboard copy failed:', err);
-      });
+      navigator.clipboard.writeText(textArea.value)
+        .then(() => showToast())
+        .catch(err => console.error("Copy failed:", err));
+    }
+
+    // Show toast notification
+    function showToast() {
+      const toast = document.getElementById("toast");
+      toast.classList.remove("hidden");
+      setTimeout(() => {
+        toast.classList.add("hidden");
+      }, 2000);
     }
   </script>
 
