--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Download Section -->
     <section class="bg-gray-800 p-6 rounded-lg shadow-md text-center">
       <h2 class="text-2xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-blue-500 mb-4">
-        ⬇️ Download Windows Host File
+        ⬇️ Download Android Host File
       </h2>
       <a id="downloadBtn" href="#" download="gtps25_hosts.txt"
          class="bg-blue-600 hover:bg-blue-700 transition-all px-6 py-3 rounded-full inline-block font-medium">
