--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
       </a>
     </section>
 
+    <!--Vhost apk dl -->
+    <a href="vhost.apk" download
+    class="bg-yellow-500 hover:bg-yellow-600 text-white font-semibold px-5 py-3 rounded transition-all inline-block">
+   📲 Download Virtual Hosts APK
+    </a>
+    <p class="text-sm text-gray-400 mt-2">Size: ~2.3MB • Requires Android 5.0+</p>
+
     <!-- Platform Blocks -->
     <section class="grid md:grid-cols-2 gap-6">
 
