--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
   </div>
 
   <!-- Header -->
-  <header class="bg-gray-900 w-full py-6 shadow-md mb-10">
-    <div class="max-w-4xl mx-auto px-6 text-center">
-      <h1 class="text-4xl font-extrabold tracking-wide flex justify-center items-center gap-3">
+  <header class="bg-gray-900 w-full py-4 md:py-6 shadow-md mb-10">
+    <div class="max-w-4xl mx-auto px-4 md:px-6 text-center">
+      <h1 class="text-3xl md:text-4xl font-extrabold tracking-wide flex justify-center items-center gap-3">
         🌐 GTPS25 Host Setup
       </h1>
-      <p class="text-gray-400 mt-2 text-sm">Set up your host files for different platforms easily</p>
+      <p class="text-gray-400 mt-2 text-xs md:text-sm">Set up your host files for different platforms easily</p>
     </div>
   </header>
 
   <!-- Main Content -->
-  <main class="max-w-4xl mx-auto px-4 grid gap-6 fade-in">
+  <main class="max-w-4xl mx-auto px-4 md:px-6 grid gap-6 fade-in">
 
     <!-- Download Section -->
     <section class="bg-gray-800 p-6 rounded-lg shadow-md text-center">
@@ -46,30 +46,32 @@
       </a>
     </section>
 
-    <!--Vhost apk dl -->
-    <a href="vhost.apk" download
-    class="bg-yellow-500 hover:bg-yellow-600 text-white font-semibold px-5 py-3 rounded transition-all inline-block">
-   📲 Download Virtual Hosts APK
-    </a>
-    <p class="text-sm text-gray-400 mt-2">Size: ~2.3MB • Requires Android 5.0+</p>
+    <!-- Vhost APK Download -->
+    <section class="text-center">
+      <a href="vhost.apk" download
+         class="bg-yellow-500 hover:bg-yellow-600 text-white font-semibold px-5 py-3 rounded transition-all inline-block">
+       📲 Download Virtual Hosts APK
+      </a>
+      <p class="text-sm text-gray-400 mt-2">Size: ~2.3MB • Requires Android 5.0+</p>
+    </section>
 
     <!-- Platform Blocks -->
-    <section class="grid md:grid-cols-2 gap-6">
+    <section class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
       <!-- Power Tunnel -->
-      <div class="bg-gray-800 p-6 rounded-lg shadow-md">
+      <div class="bg-gray-800 p-4 md:p-6 rounded-lg shadow-md">
         <h2 class="text-xl font-semibold mb-3">⚙️ Power Tunnel Host</h2>
         <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">
           Click to copy Power Tunnel URL
         </div>
         <textarea id="PtunnelText" class="hidden" readonly>https://growsoft.cc/android.txt</textarea>
-        <button onclick="copyText('PtunnelText')" class="mt-2 bg-green-600 hover:bg-green-700 px-4 py-2 rounded transition-all">
+        <button onclick="copyText('PtunnelText')" class="w-full md:w-auto mt-2 bg-green-600 hover:bg-green-700 px-4 py-2 rounded transition-all">
           📋 Copy
         </button>
       </div>
 
       <!-- macOS Host -->
-      <div class="bg-gray-800 p-6 rounded-lg shadow-md">
+      <div class="bg-gray-800 p-4 md:p-6 rounded-lg shadow-md">
         <h2 class="text-xl font-semibold mb-3">🍏 macOS Host</h2>
         <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">
           Copy macOS host entries for your system
@@ -79,13 +81,13 @@
 91.134.85.13 growtopia2.com
 91.134.85.13 www.growtopia1.com
 91.134.85.13 www.growtopia2.com</textarea>
-        <button onclick="copyText('macText')" class="mt-2 bg-green-600 hover:bg-green-700 px-4 py-2 rounded transition-all">
+        <button onclick="copyText('macText')" class="w-full md:w-auto mt-2 bg-green-600 hover:bg-green-700 px-4 py-2 rounded transition-all">
           📋 Copy
         </button>
       </div>
 
       <!-- Windows Host -->
-      <div class="bg-gray-800 p-6 rounded-lg shadow-md">
+      <div class="bg-gray-800 p-4 md:p-6 rounded-lg shadow-md">
         <h2 class="text-xl font-semibold mb-3">🪟 Windows Host</h2>
         <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">
           Copy Windows host entries to clipboard
@@ -95,13 +97,13 @@
 91.134.85.13 growtopia2.com
 91.134.85.13 www.growtopia1.com
 91.134.85.13 www.growtopia2.com</textarea>
-        <button onclick="copyText('windowsText')" class="mt-2 bg-blue-600 hover:bg-blue-700 px-4 py-2 rounded transition-all">
+        <button onclick="copyText('windowsText')" class="w-full md:w-auto mt-2 bg-blue-600 hover:bg-blue-700 px-4 py-2 rounded transition-all">
           📋 Copy
         </button>
       </div>
 
       <!-- iOS Host -->
-      <div class="bg-gray-800 p-6 rounded-lg shadow-md">
+      <div class="bg-gray-800 p-4 md:p-6 rounded-lg shadow-md">
         <h2 class="text-xl font-semibold mb-3">📱 iOS Host Link</h2>
         <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">
           Tap to copy iOS config for Shadowrocket or Surge
@@ -119,7 +121,7 @@ growtopia2.com = 91.134.85.13
 www.growtopia1.com = 91.134.85.13
 www.growtopia2.com = 91.134.85.13
 RvLnd.here = 91.134.85.13</textarea>
-        <button onclick="copyText('iosText')" class="mt-2 bg-purple-600 hover:bg-purple-700 px-4 py-2 rounded transition-all">
+        <button onclick="copyText('iosText')" class="w-full md:w-auto mt-2 bg-purple-600 hover:bg-purple-700 px-4 py-2 rounded transition-all">
           📋 Copy
         </button>
       </div>
