--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ RvLnd.here = 91.134.85.13</textarea>
 
   <!-- Footer -->
   <footer class="mt-12 text-center text-sm text-gray-500 pb-6">
-    &copy; 2025 GTPS25. All rights reserved.
+    &copy; Created By Clem. All rights reserved.
   </footer>
 
   <script>
