--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h1 class="text-3xl md:text-4xl font-extrabold tracking-wide flex justify-center items-center gap-3">
         🌐 GTPS25 Host Setup
       </h1>
-      <p class="text-gray-400 mt-2 text-xs md:text-sm">Set up your host files for different platforms easily</p>
+      <p class="text-gray-400 mt-2 text-xs md:text-sm">Set up your host files for different platforms easily. If you encountered bugs please report it to @Clem on discord!</p>
     </div>
   </header>
 
