--- a/index.html
+++ b/index.html
@@ -1,166 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GTPS25 Host Setup</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Coming Soon</title>
   <style>
-    .fade-in {
-      animation: fadeIn 0.8s ease-in-out;
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(135deg, #0f0f1f, #1a0033);
+      font-family: Arial, sans-serif;
+      color: #fff;
+      text-align: center;
     }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
+    h1 {
+      font-size: 3em;
+      color: #00ccff;
+      text-shadow: 0 0 15px #00ccff, 0 0 30px #6600ff;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 1.2em;
+      color: #ccc;
+      margin-bottom: 20px;
+    }
+    .glow {
+      animation: glow 2s infinite alternate;
+    }
+    @keyframes glow {
+      from {
+        text-shadow: 0 0 10px #00ccff, 0 0 20px #6600ff;
+      }
+      to {
+        text-shadow: 0 0 20px #00ccff, 0 0 40px #6600ff;
+      }
+    }
+    .btn {
+      display: inline-block;
+      padding: 12px 25px;
+      font-size: 1.1em;
+      font-weight: bold;
+      color: #fff;
+      background: linear-gradient(90deg, #5865f2, #4e5d94);
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      text-decoration: none;
+      box-shadow: 0 0 15px #5865f2;
+      transition: transform 0.2s, box-shadow 0.3s;
+    }
+    .btn:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 25px #5865f2;
     }
   </style>
 </head>
-<body class="bg-gray-950 text-white min-h-screen font-sans transition-all">
-
-  <!-- Toast -->
-  <div id="toast" class="fixed bottom-5 right-5 bg-green-600 text-white px-4 py-2 rounded shadow-lg hidden z-50">
-    ✅ Copied!
+<body>
+  <div>
+    <h1 class="glow">COMING SOON</h1>
+    <p>We’re launching on <strong>Discord</strong> first!</p>
+    <a href="https://discord.gg/WHBd6PG7q3" target="_blank" class="btn">Join Our Discord</a>
   </div>
-
-  <!-- Header -->
-  <header class="bg-gray-900 w-full py-4 md:py-6 shadow-md mb-10">
-    <div class="max-w-4xl mx-auto px-4 md:px-6 text-center">
-      <h1 class="text-3xl md:text-4xl font-extrabold tracking-wide flex justify-center items-center gap-3">
-        🌐 GTPS25 Host Setup
-      </h1>
-      <p class="text-gray-400 mt-2 text-xs md:text-sm">Set up your host files for different platforms easily. If you encountered bugs please report it to @Clem on discord!</p>
-    </div>
-  </header>
-
-  <!-- Main Content -->
-  <main class="max-w-4xl mx-auto px-4 md:px-6 grid gap-6 fade-in">
-
-    <!-- Download Section -->
-    <section class="bg-gray-800 p-6 rounded-lg shadow-md text-center">
-      <h2 class="text-2xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-blue-500 mb-4">
-        ⬇️ Download Android Host File
-      </h2>
-      <a id="downloadBtn" href="#" download="gtps25_hosts.txt"
-         class="bg-blue-600 hover:bg-blue-700 transition-all px-6 py-3 rounded-full inline-block font-medium">
-        📄 Download Host File
-      </a>
-    </section>
-
-    <!-- Vhost APK Download -->
-    <section class="text-center">
-      <a href="vhost.apk" download
-         class="bg-yellow-500 hover:bg-yellow-600 text-white font-semibold px-5 py-3 rounded transition-all inline-block">
-       📲 Download Virtual Hosts APK
-      </a>
-      <p class="text-sm text-gray-400 mt-2">Size: ~2.3MB • Requires Android 5.0+</p>
-    </section>
-
-    <!-- Platform Blocks -->
-    <section class="grid grid-cols-1 md:grid-cols-2 gap-6">
-
-      <!-- Power Tunnel -->
-      <div class="bg-gray-800 p-4 md:p-6 rounded-lg shadow-md">
-        <h2 class="text-xl font-semibold mb-3">⚙️ Power Tunnel Host</h2>
-        <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">
-          Click to copy Power Tunnel URL
-        </div>
-        <textarea id="PtunnelText" class="hidden" readonly>https://growsoft.cc/android.txt</textarea>
-        <button onclick="copyText('PtunnelText')" class="w-full md:w-auto mt-2 bg-green-600 hover:bg-green-700 px-4 py-2 rounded transition-all">
-          📋 Copy
-        </button>
-      </div>
-
-      <!-- macOS Host -->
-      <div class="bg-gray-800 p-4 md:p-6 rounded-lg shadow-md">
-        <h2 class="text-xl font-semibold mb-3">🍏 macOS Host</h2>
-        <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">
-          Copy macOS host entries for your system
-        </div>
-        <textarea id="macText" class="hidden" readonly>
-91.134.85.13 growtopia1.com
-91.134.85.13 growtopia2.com
-91.134.85.13 www.growtopia1.com
-91.134.85.13 www.growtopia2.com</textarea>
-        <button onclick="copyText('macText')" class="w-full md:w-auto mt-2 bg-green-600 hover:bg-green-700 px-4 py-2 rounded transition-all">
-          📋 Copy
-        </button>
-      </div>
-
-      <!-- Windows Host -->
-      <div class="bg-gray-800 p-4 md:p-6 rounded-lg shadow-md">
-        <h2 class="text-xl font-semibold mb-3">🪟 Windows Host</h2>
-        <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">
-          Copy Windows host entries to clipboard
-        </div>
-        <textarea id="windowsText" class="hidden" readonly>
-91.134.85.13 growtopia1.com
-91.134.85.13 growtopia2.com
-91.134.85.13 www.growtopia1.com
-91.134.85.13 www.growtopia2.com</textarea>
-        <button onclick="copyText('windowsText')" class="w-full md:w-auto mt-2 bg-blue-600 hover:bg-blue-700 px-4 py-2 rounded transition-all">
-          📋 Copy
-        </button>
-      </div>
-
-      <!-- iOS Host -->
-      <div class="bg-gray-800 p-4 md:p-6 rounded-lg shadow-md">
-        <h2 class="text-xl font-semibold mb-3">📱 iOS Host Link</h2>
-        <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">
-          Tap to copy iOS config for Shadowrocket or Surge
-        </div>
-        <textarea id="iosText" class="hidden" readonly>
-[General]
-bypass-system = true
-
-[Rule]
-FINAL,DIRECT
-
-[Host]
-growtopia1.com = 91.134.85.13
-growtopia2.com = 91.134.85.13
-www.growtopia1.com = 91.134.85.13
-www.growtopia2.com = 91.134.85.13
-RvLnd.here = 91.134.85.13</textarea>
-        <button onclick="copyText('iosText')" class="w-full md:w-auto mt-2 bg-purple-600 hover:bg-purple-700 px-4 py-2 rounded transition-all">
-          📋 Copy
-        </button>
-      </div>
-
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer class="mt-12 text-center text-sm text-gray-500 pb-6">
-    &copy; Created By Clem. All rights reserved.
-  </footer>
-
-  <script>
-    // Downloadable host file content
-    const downloadContent = `91.134.85.13 growtopia1.com
-91.134.85.13 growtopia2.com
-91.134.85.13 www.growtopia1.com
-91.134.85.13 www.growtopia2.com`;
-
-    const blob = new Blob([downloadContent], { type: "text/plain" });
-    document.getElementById("downloadBtn").href = URL.createObjectURL(blob);
-
-    // Copy from hidden textarea
-    function copyText(id) {
-      const textArea = document.getElementById(id);
-      navigator.clipboard.writeText(textArea.value)
-        .then(() => showToast())
-        .catch(err => console.error("Copy failed:", err));
-    }
-
-    // Show toast notification
-    function showToast() {
-      const toast = document.getElementById("toast");
-      toast.classList.remove("hidden");
-      setTimeout(() => {
-        toast.classList.add("hidden");
-      }, 2000);
-    }
-  </script>
-
 </body>
 </html>
