--- a/index.html
+++ b/index.html
@@ -28,17 +28,6 @@
       color: #ccc;
       margin-bottom: 20px;
     }
-    .glow {
-      animation: glow 2s infinite alternate;
-    }
-    @keyframes glow {
-      from {
-        text-shadow: 0 0 10px #00ccff, 0 0 20px #6600ff;
-      }
-      to {
-        text-shadow: 0 0 20px #00ccff, 0 0 40px #6600ff;
-      }
-    }
     .btn {
       display: inline-block;
       padding: 12px 25px;
@@ -52,10 +41,48 @@
       text-decoration: none;
       box-shadow: 0 0 15px #5865f2;
       transition: transform 0.2s, box-shadow 0.3s;
+      margin: 10px;
     }
     .btn:hover {
       transform: scale(1.05);
       box-shadow: 0 0 25px #5865f2;
+    }
+    #formPopup {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.8);
+      justify-content: center;
+      align-items: center;
+    }
+    .form-container {
+      background: #1a0033;
+      padding: 20px;
+      border-radius: 10px;
+      width: 300px;
+      box-shadow: 0 0 20px #5865f2;
+    }
+    .form-container h2 {
+      margin-bottom: 15px;
+      color: #00ccff;
+    }
+    .form-container input, .form-container textarea {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+      border: none;
+      border-radius: 5px;
+    }
+    .form-container button {
+      width: 100%;
+      padding: 10px;
+      background: #5865f2;
+      border: none;
+      border-radius: 5px;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -64,6 +91,27 @@
     <h1 class="glow">COMING SOON</h1>
     <p>We’re launching on <strong>Discord</strong> first!</p>
     <a href="https://discord.gg/WHBd6PG7q3" target="_blank" class="btn">Join Our Discord</a>
+    <button class="btn" onclick="document.getElementById('formPopup').style.display='flex'">Apply Now</button>
+  </div>
+
+  <!-- Popup Form -->
+  <div id="formPopup">
+    <div class="form-container">
+      <h2>Application Form</h2>
+      <form action="https://formsubmit.co/harriepoonin2@gmail.com" method="POST">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" rows="4" placeholder="Why do you want to apply?" required></textarea>
+        
+        <!-- To prevent spam -->
+        <input type="hidden" name="_captcha" value="false">
+        <!-- Redirect after submit -->
+        <input type="hidden" name="_next" value="https://testing2.github.io/thankyou.html">
+
+        <button type="submit">Submit</button>
+      </form>
+      <button style="margin-top:10px; background:#6600ff;" onclick="document.getElementById('formPopup').style.display='none'">Close</button>
+    </div>
   </div>
 </body>
 </html>
