--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <!-- To prevent spam -->
         <input type="hidden" name="_captcha" value="false">
         <!-- Redirect after submit -->
-        <input type="hidden" name="_next" value="https://testing2.github.io/thankyou.html">
+        <input type="hidden" name="_next" value="https://testing2.github.io/GTPS25/thankyou.html">
 
         <button type="submit">Submit</button>
       </form>
