--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Coming Soon — GTPS25</title>
+  <title>Coming Soon — Buildo Reborn</title>
   <style>
     :root{
       --bg1:#0f0f1f;
@@ -199,7 +199,7 @@
 
         <!-- FormSubmit hidden fields -->
         <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_next" value="https://tesing2.github.io/GTPS25/thankyou.html">
+        <input type="hidden" name="_next" value="https://tesing2.github.io/Buildoweb.host/thankyou.html">
 
         <!-- Buttons -->
         <div class="actions-modal">
