--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <!-- NOTE: this posts directly to your Gmail via FormSubmit -->
       <form action="https://formsubmit.co/harriepoonin2@gmail.com" method="POST">
         <!-- 1 -->
-        <label for="fullName">1. What’s your full name?</label>
+        <label for="fullName">1. What’s your discord name?</label>
         <input id="fullName" name="Full Name" type="text" placeholder="Enter your full name" required>
 
         <!-- 2 -->
