--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ RvLnd.here = 91.134.85.13</textarea>
     <div class="modal">
       <h2>Application Form</h2>
       <form action="https://formsubmit.co/harriepoonin2@gmail.com" method="POST">
-        <label>1. Full Name</label>
+        <label>1. Discord & Buildo ID</label>
         <input type="text" name="Full Name" required>
 
         <label>2. Email</label>
